--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<link rel="stylesheet" href="styles.css">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
         <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="icon" href="C:\Users\veron\Downloads\PortfolioWebsite\favicon.ico">
 	</head>
 	<body>
 	
@@ -22,13 +21,13 @@
             </div>
         
             <div class="column">
-                <img src="C:\Users\veron\Downloads\PortfolioWebsite/KARD.png" alt="KARD - a character from one of my early projects" style="width:200px;height:200px;">
+                <img src="/KARD.png" alt="KARD - a character from one of my early projects" style="width:200px;height:200px;">
             </div>
         </div>
 
         <div class="row">
             <div class="column">
-                <img src="C:\Users\veron\Downloads\PortfolioWebsite/KARD.png" alt="KARD - a character from one of my early projects" style="width:200px;height:200px;">
+                <img src="/KARD.png" alt="KARD - a character from one of my early projects" style="width:200px;height:200px;">
             </div>
             
             <div class="container column">
