--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 			<h1>Jacob Beason Entwistle</h1>
 		</div>
 		
+		<nav class="center navigation-bar">
+            <a href="/index.html">home</a>
+            <a href="/about.html">about</a>
+            <a href="/projects.html">projects</a>
+            <a href="/contact.html">contact</a>
+        </nav>
+		
     	<h2>My Portfolio</h2>
         
         <div class="row">
