Fixing nav links
- /projects.html returned a error 404 page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		</div>
 		
 		<nav class="center navigation-bar">
-            <a href="/index.html">home</a>
-            <a href="/about.html">about</a>
-            <a href="/projects.html">projects</a>
-            <a href="/contact.html">contact</a>
+            <a href="/index">home</a>
+            <a href="/about">about</a>
+            <a href="/projects">projects</a>
+            <a href="/contact">contact</a>
         </nav>
 		
     	<h2>My Portfolio</h2>
