Readjusted Page Layouts
I redid the layouts for each page.
- Changed the main navigation menu to be on the same line as my name.
- Added a list of ways to contact me.
- Added a new top-bar section in the CSS and changed some font sizes

--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-	<html>
+	<html lang="en-GB">
 	<head>
-		<title>Projects</title>
+		<title>Jacob B.E.</title>
+		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
+	
+    	<header class="top-bar">
+    		<div class="header">
+    			<h1>Jacob Beason Entwistle</h1>
+    		</div>
+
+    		<nav class="navigation-bar">
+                <a href="./index.html">HOME</a>
+                <a href="./about.html">ABOUT</a>
+                <a href="./projects.html">PROJECTS</a>
+                <a href="./contact.html">CONTACT</a>
+            </nav>
+        </header>
 
 		<h1>University Projects</h1>
 		<p></p>
