--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Jacob B.E.</title>
 		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
         <link rel="shortcut icon" href="/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,13 +14,16 @@
     		<div class="header">
     			<h1>Jacob Beason Entwistle</h1>
     		</div>
-
+		
     		<nav class="navigation-bar">
                 <a href="./index.html">HOME</a>
                 <a href="./about.html">ABOUT</a>
                 <a href="./projects.html">PROJECTS</a>
                 <a href="./contact.html">CONTACT</a>
             </nav>
+            
+            <a href="https://www.linkedin.com/in/jacob-beason" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://www.youtube.com/@ToastyCodeStudios" class="fa fa-youtube-play" target="_blank"></a>
         </header>
 
 		<h1>University Projects</h1>
@@ -33,6 +37,22 @@
 
 		<h1>Python Text-Based systems</h1>
 		<p></p>
+
+        <footer>
+            <p>My LinkedIn:
+            <a href="https://www.linkedin.com/in/jacob-beason" class="fa fa-linkedin" target="_blank"></a>
+            </p>
+            <p>My YouTube:
+            <a href="https://www.youtube.com/@ToastyCodeStudios" class="fa fa-youtube-play" target="_blank"></a>
+            </p>
+            
+            <nav class="navigation-bar">
+                <a href="./index.html">HOME</a>
+                <a href="./about.html">ABOUT</a>
+                <a href="./projects.html">PROJECTS</a>
+                <a href="./contact.html">CONTACT</a>
+            </nav>
+        </footer>
 
 	</body>
 	</html>
