--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     	<section class="hero row">
             <div class="column">
         		<h2 id="intro" class="viewport-text">Hello world! I'm Jacob</h2>
-        		<p class="viewport-text">I'm a Games Developer currently studyinga BSc Hons Game Development Technology at <a href="https://www.bcu.ac.uk/" target="_blank">Birmingham City University</a>.</p>
+        		<p class="viewport-text">I'm a Games Developer currently studying BSc Hons Game Development Technology at <a href="https://www.bcu.ac.uk/" target="_blank">Birmingham City University</a>.</p>
             </div>
             
             <div class="column"></div>
