--- a/about.html
+++ b/about.html
@@ -27,10 +27,29 @@
                 <div class="column side"></div>
 
                 <div class="column middle">
-                    <div class="grid-container" style="grid-template-columns: 1fr; font-size: 30px;">
-                        <p>I've already worked with Python, C#, Unity, Unreal Engine (Blueprints), and 3D modelling in Maya. I love building games, designing and implementing cool features, as well as creating assets. I'm especially passionate about coding and problem-solving, but I enjoy exploring all aspects of development.</p>
+                    <div class="grid-container" style="grid-template-columns: 1fr; font-size: 20px;">
+                        <div>
+                            <h1 style="font-size: 25px;">Where I'm currently at:</h1>
+                            <img src="./resources/images/hackathon.jpg" style="float: right; width: 40%;">
+                            <p>In my first year of <a href="https://www.bcu.ac.uk/" target="_blank">Birmingham City University</a>, I worked with Python, C#, Unity, Unreal Engine (Blueprints), and 3D modelling in Maya.<br><br>I love building games, designing and implementing cool features, as well as creating assets. I'm especially passionate about coding and problem-solving, but I enjoy exploring all aspects of development.</p>
+                        </div>
 
-                        <p>I started coding in secondary school using Python and Scratch, and quickly became interested in how games are made. I played around in Unity (using C#) to create a game around June 2020, following tutorials and adding basic features like left/right movement and a way to respawn. During A-Levels, I built a 2D game in Unity with moving enemies, a health system, and my own custom sprites. I designed multiple levels, each with a different theme, and sprinkled collectables all throughout. Since starting my degree in Game Development Technology at BCU, I've worked with Unity, Unreal Engine, Maya, Python and many more tools. I will share some of my achievements and lessons learned throughout this website I made.</p>
+                        <div>
+                            <p>In the summer holiday, after completing my first year of university, I participated in a Micro-Placement opportunity at <a href="https://www.tg0.co.uk/" target="_blank">TG0</a>. During this placement, I mainly worked remotely to design and develop a game to help make stroke rehabilitation fun!</p>
+                        </div>
+
+                        <div>
+                            <h1 style="font-size: 25px;">My history:</h1>
+                            <p>I started coding in secondary school using Python and Scratch, and quickly became interested in <span style="font-style: italic;">how</span> games are made. I played around in Unity (using C#) to create a game around June 2020, following tutorials and adding basic features like left/right movement and a way to respawn.</p>
+                        </div>
+
+                        <div>
+                            <img src="./resources/images/Frogby.png" alt="A frog-like character from my first proper game, Tree Asssassin." style="float: left; width: 20%; align-items: center;">
+                            <img src="./resources/images/Frogby_serious.png" alt="A serious version of Frogby, the frog-like character from Tree Asssassin." style="float: right; width: 20%; align-items: center;">
+                            <p>During my A-Levels, I built a 2D game in Unity called Tree Assassin with moving enemies, a health system, and my own custom sprites. I designed multiple levels, each with a different theme, and sprinkled collectables all throughout.</p>
+                        </div>
+                        
+                        <p>Since starting my degree in Computer Games Technology at BCU, I've worked with Unity, Unreal Engine, Maya, Python and many more tools. I will share some of my achievements and lessons learned throughout this website I made.</p>
                     </div>
                 </div>
 
