--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                     <h1>Featured Games:</h1>
                     <div class="grid-container">
                         <div class="game">
-                            <img src="./images/DrumFlow_beachLevel.png" alt="The beach level from my rhythm game.">
+                            <a href="https://github.com/Jacob-BeasonEntwistle/DrumFlow" target="_blank" class="project-link"><img src="./resources/images/DrumFlow_beachLevel.png" alt="The beach level from my rhythm game."></a>
                             <div class="title">DrumFlow</div>
                             <div class="description">DrumFlow was a game that I developed for an 80-hour placement. Implemented a responsive scoring system, adaptive audio, and intuitive controls to encourage player feedback and immersion.</div>
                         </div>
                         <div class="game">
-                            <img src="./images/KARD_title.png" alt="My 2D game from semester 1 of university.">
+                            <a href="https://github.com/Jacob-BeasonEntwistle/KARD" target="_blank" class="project-link"><img src="./resources/images/KARD_title.png" alt="My 2D game from semester 1 of university."></a>
                             <div class="title">KARD</div>
                             <div class="description">A game about a robot that has to collect cargo before the enemy robot destroys it. The game has two modes, singleplayer as well as multiplayer which uses a split screen view, each player having their own score.</div>
                         </div>
                         <div class="game">
-                            <img src="./images/Spotlight_title.png" alt="A 2D platformer that I made before starting university.">
+                            <a href="https://toastyg3.itch.io/spotlight" target="_blank" class="project-link"><img src="./resources/images/Spotlight_title.png" alt="A 2D platformer that I made before starting university."></a>
                             <div class="title">Spotlight</div>
                             <div class="description">You control a spotlight that reveals hidden items, secrets and collectables. The player must utilise this feature to reveal platforms in order to progress throughout the game.</div>
                         </div>
@@ -49,42 +49,26 @@
                     <h1>Other Projects:</h1>
                     <div class="grid-container">
                         <div class="game">
-                            <img src="./images/hackathon.jpg" alt="A picture of me presenting my hackathon idea.">
+                            <a href="https://www.linkedin.com/posts/jacob-beason_techforgood-techhack4dementia-dementiasupport-activity-7331113336765358080-ksLP?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
+                                <img src="./resources/images/hackathon.jpg" alt="A picture of me presenting my hackathon idea.">
+                            </a>
                             <div class="title">ROVER</div>
                             <div class="description">The hackathon was based around helping people that suffer from Dementia. I came up with an idea for a digital companion that could encourage daily activities, reinforce positive habits, and offer comfort to the user. </div>
                         </div>
                         <div class="game">
-                            <img src="./images/dalek.png" alt="My 3D model of a Dalek from Doctor Who.">
+                            <a href="https://www.linkedin.com/posts/jacob-beason_3dmodelling-maya-mayamodelling-activity-7280493079017533440-ts3k?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
+                                <img src="./resources/images/dalek.png" alt="My 3D model of a Dalek from Doctor Who.">
+                            </a>
                             <div class="title">Dalek</div>
                             <div class="description">A hard-surface model that I created for the 1st semester of University. I had lots of fun modelling it and was able to overcome many challenges that I faced.</div>
                         </div>
                         <div class="game">
-                            <img src="./images/dichromatic.jpg" alt="A 2D puzzle game that I made before university.">
-                            <div class="title">Dichromatic</div>
-                            <div class="description">The game uses 3D glasses with each lens showing objects of a specific color, highlighting the "Two Points of View" theme. Using two colors from a limited palette, it showcases different perspectives through each lens.</div>
+                            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7307491585213038592?compact=1" height="200" width="auto" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                            <div class="title">Recreating the Elden Ring UI</div>
+                            <div class="description">For an activity in university, we had to choose one game and recreate the UI for that game but using Unreal Engine blueprints. I chose Elden Ring and added the mechanic to lock-on to nearby enemies.</div>
                         </div>
                     </div>
-
-                    <!-- <div class="grid-container">
-                        <div>
-                            <img src="./images/DrumFlow_beachLevel.png" alt="The beach level from my rhythm game.">
-                        </div>
-                        <div>Game 2</div>
-                        <div>Game 3</div>
-                        <div>Game 1 description</div>
-                        <div>Game 2 description</div>
-                        <div>Game 3 description</div>
-                    </div> -->
-
-                    <!-- <div class="grid-container">
-                        <div>Project 1</div>
-                        <div>Project 2</div>
-                        <div>Project 3</div>
-                        <div>Project 1 description</div>
-                        <div>Project 2 description</div>
-                        <div>Project 3 description</div>
-                    </div> -->
-
+                    
                     <a href="./portfolio.html" class="page-button" style="background-color: #FF9505; color: #f2f2f2;">See full portfolio</a>
                 </div>
 
