--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,12 @@
                 <div class="column side"></div>
 
                 <div class="column middle">
-                    
+                    <h2>Socials:</h2>
+                    <ul>
+                        <li>LinkedIn: <a href="https://www.linkedin.com/in/jacob-beason" target="_blank">Jacob Beason Entwistle</a></li>
+                        <li>YouTube: <a href="https://www.youtube.com/@ToastyCodeStudios" target="_blank">ToastyCodeStudios</a></li>
+                        <li>Email: jacob.beason@mail.bcu.ac.uk</li>
+                    </ul>
                 </div>
 
                 <div class="column side"></div>
