Updated content & responsiveness
- Added mobile responsiveness to the CSS
- Added more links and images to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,32 +30,34 @@
                     <h1>My Games</h1>
                     <div class="grid-container">
                         <div class="game">
-                            <a href="https://github.com/Jacob-BeasonEntwistle/DrumFlow" target="_blank" class="project-link"><img src="./resources/images/DrumFlow_beachLevel.png" alt="The beach level from my rhythm game."></a>
+                            <a href="https://github.com/Jacob-BeasonEntwistle/DrumFlow" target="_blank" class="project-link"><img src="./resources/images/DrumFlow_beachLevel.png" alt="The beach level filled with palm trees, sand, and the ocean in the background."></a>
                             <div class="title">DrumFlow</div>
                             <div class="description">DrumFlow was a game that I developed for an 80-hour placement. Implemented a responsive scoring system, adaptive audio, and intuitive controls to encourage player feedback and immersion.</div>
                         </div>
                         <div class="game">
-                            <a href="https://github.com/Jacob-BeasonEntwistle/KARD" target="_blank" class="project-link"><img src="./resources/images/KARD_title.png" alt="My 2D game from semester 1 of university."></a>
+                            <a href="https://github.com/Jacob-BeasonEntwistle/KARD" target="_blank" class="project-link"><img src="./resources/images/KARD_title.png" alt="The titlescreen of my 2D game featuring two little square robot characters and the pointy metal enemies."></a>
                             <div class="title">KARD</div>
                             <div class="description">A game about a robot that has to collect cargo before the enemy robot destroys it. The game has two modes, singleplayer as well as multiplayer which uses a split screen view, each player having their own score.</div>
                         </div>
                         <div class="game">
-                            <a href="https://toastyg3.itch.io/spotlight" target="_blank" class="project-link"><img src="./resources/images/Spotlight_title.png" alt="A 2D platformer that I made before starting university."></a>
+                            <a href="https://toastyg3.itch.io/spotlight" target="_blank" class="project-link"><img src="./resources/images/Spotlight_title.png" alt="A titlescreen containing a humanoid-moth creature, the title Spotlight, and the spotlight in the top left."></a>
                             <div class="title">Spotlight</div>
                             <div class="description">You control a spotlight that reveals hidden items, secrets and collectables. The player must utilise this feature to reveal platforms in order to progress throughout the game.</div>
                         </div>
 
                         <div class="game">
                             <a href="https://toastyg3.itch.io/dichromatic" target="_blank" class="project-link">
-                                <img src="./resources/images/dichromatic.jpg" alt="A 2D puzzle game that I made before university.">
+                                <img src="./resources/images/dichromatic.jpg" alt="A pair of 3D red and blue glasses with hidden mazes within the lenses.">
                             </a>
                             <div class="title">Dichromatic</div>
                             <div class="description">The game uses 3D glasses with each lens showing objects of a specific color, highlighting the "Two Points of View" theme. Using two colors from a limited palette, it showcases different perspectives through each lens.</div>
                         </div>
                         <div class="game">
-                            <img src="./resources/images/" alt="">
-                            <div class="title"></div>
-                            <div class="description"></div>
+                            <a href="https://youtu.be/rcgTyi5tEBQ?si=Ztls8VwhpAeLbtJb" target="_blank" class="project-link">
+                                <img src="./resources/images/theCrimsonCall.png" alt="A knight running towards a mysterious red phonebox in the middle of a medieval village.">
+                            </a>
+                            <div class="title">The Crimson Call</div>
+                            <div class="description">A third-person adventure in Unreal Engine 5 (Blueprints) focused on narrative and environmental storytelling. Players control a knight who discovers a mysterious wand, unlocking interactive elements and encouraging exploration.</div>
                         </div>
                         <div class="game">
                             <img src="./resources/images/" alt="">
@@ -74,21 +76,25 @@
                         </div>
                         <div class="game">
                             <a href="https://www.linkedin.com/posts/jacob-beason_3dmodelling-maya-mayamodelling-activity-7280493079017533440-ts3k?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
-                                <img src="./resources/images/dalek.png" alt="My 3D model of a Dalek from Doctor Who.">
+                                <img src="./resources/images/dalek.png" alt="A 3D model of a Dalek from Doctor Who that I modelled.">
                             </a>
                             <div class="title">Dalek</div>
                             <div class="description">A hard-surface model that I created for the 1st semester of University. I had lots of fun modelling it and was able to overcome many challenges that I faced.</div>
                         </div>
                         <div class="game">
-                            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7307491585213038592?compact=1" height="200" width="auto" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                            <a href="https://www.linkedin.com/posts/jacob-beason_gamedevelopment-unrealengine-eldenring-activity-7307491629517426689-wxcH?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
+                                <img src="./resources/images/eldenRing_UI.png" alt="My recreation of the Elden Ring heads up display featuring a boss healthbar in the bottom middle and the players health, stamina, and mana.">
+                            </a>
                             <div class="title">Recreating the Elden Ring UI</div>
                             <div class="description">For an activity in university, we had to choose one game and recreate the UI for that game but using Unreal Engine blueprints. I chose Elden Ring and added the mechanic to lock-on to nearby enemies.</div>
                         </div>
 
                         <div class="game">
-                            <img src="./resources/images/" alt="">
-                            <div class="title"></div>
-                            <div class="description"></div>
+                            <a href="https://www.linkedin.com/posts/jacob-beason_python-skyrim-datastructures-activity-7306646602931187712-Bp-D?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
+                                <img src="./resources/images/skilltree.jpeg" alt="A section of code that codes a tree data structure for Skyrim skills.">
+                            </a>
+                            <div class="title">Skyrim Skill Tree</div>
+                            <div class="description">During my first year of university, we briefly studied tree data structures. I decided to recreate Skyrim's Destruction skill tree in Python. I recreated the first 3 branches of the skill tree using classes, dictionaries, and functions that checked if the skill can be unlocked.</div>
                         </div>
                         <div class="game">
                             <img src="./resources/images/" alt="">
