--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                     <ul>
                         <li>LinkedIn: <a href="https://www.linkedin.com/in/jacob-beason" target="_blank">Jacob Beason Entwistle</a></li>
                         <li>YouTube: <a href="https://www.youtube.com/@ToastyCodeStudios" target="_blank">ToastyCodeStudios</a></li>
-                        <li>Email: jacob.beason@mail.bcu.ac.uk</li>
+                        <li>Email: jacob.beasonentwistle@mail.bcu.ac.uk</li>
                     </ul>
                 </div>
 
