--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 	<html lang="en-GB">
 	<head>
 		<title>About - Jacob B.E.</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="resources/css/styles.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
         <link rel="shortcut icon" href="/favicon.ico">
