--- a/portfolio.html
+++ b/portfolio.html
@@ -65,14 +65,22 @@
                             <div class="description"></div>
                         </div>
                     </div>
+
                     <h1>Other Projects</h1>
                     <div class="grid-container">
+                        <div class="game">
+                            <a href="https://jacob-beasonentwistle.github.io/piano-scale-trainer/" target="_blank" class="project-link">
+                                <img src="./resources/images/pianoScaleTrainer.png" alt="A picture of my piano scale training website.">
+                            </a>
+                            <div class="title">Piano Scale Trainer</div>
+                            <div class="description">This is a website I developed to help test my scales and arpeggios on the piano. When pressing a button, it randomly selects a scale and reads it out loud.</div>
+                        </div>
                         <div class="game">
                             <a href="https://www.linkedin.com/posts/jacob-beason_techforgood-techhack4dementia-dementiasupport-activity-7331113336765358080-ksLP?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
                                 <img src="./resources/images/hackathon.jpg" alt="A picture of me presenting my hackathon idea.">
                             </a>
                             <div class="title">ROVER</div>
-                            <div class="description">The hackathon was based around helping people that suffer from Dementia. I came up with an idea for a digital companion that could encourage daily activities, reinforce positive habits, and offer comfort to the user. </div>
+                            <div class="description">The hackathon was based around helping people that suffer from Dementia. I came up with an idea for a digital companion that could encourage daily activities, reinforce positive habits, and offer comfort to the user.</div>
                         </div>
                         <div class="game">
                             <a href="https://www.linkedin.com/posts/jacob-beason_3dmodelling-maya-mayamodelling-activity-7280493079017533440-ts3k?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD5mtLwB0cBEXpv5wb1Nx1HsYWWlP6xUgNA" target="_blank" class="project-link">
@@ -95,11 +103,6 @@
                             </a>
                             <div class="title">Skyrim Skill Tree</div>
                             <div class="description">During my first year of university, we briefly studied tree data structures. I decided to recreate Skyrim's Destruction skill tree in Python. I recreated the first 3 branches of the skill tree using classes, dictionaries, and functions that checked if the skill can be unlocked.</div>
-                        </div>
-                        <div class="game">
-                            <img src="./resources/images/" alt="">
-                            <div class="title"></div>
-                            <div class="description"></div>
                         </div>
                         <div class="game">
                             <img src="./resources/images/" alt="">
